ISSUE-253: Solve typo and improved help

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,11 +76,11 @@
         </p>
 
         <p>
-            <strong>Retentions</strong>: exercise were you have to keep the bow open for a given
+            <strong>Retentions</strong>: exercise where you have to keep the bow open for a given
             number of seconds and then rest the same number of seconds
         </p>
         <p>
-            <strong>Tournament</strong>:where can you load the tournament information (for real
+            <strong>Tournament</strong>: load the tournament information (for real
             tournaments or the practice ones)
         </p>
 
