ISSUE-266: Allow the user to change the date range on series stats

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -120,6 +120,9 @@
     <string name="addSerieArrowsAmountTableHeader"># de flechas</string>
     <string name="addSerieTodayTotals">Totales de hoy</string>
 
+    <string name="series_stats_viewing_date_range">Viendo los totales desde %1$s hasta %2$s</string>
+    <string name="series_stats_change_date_range">Cambiar el rango de fechas</string>
+
     <string name="series_help">
         <![CDATA[
         <html>
