--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -120,7 +120,7 @@
     <string name="addSerieDistance">Distancia</string>
     <string name="addSerieArrowsAmount">Cantidad de flechas</string>
     <string name="addSerieAdd">Agregar</string>
-    <string name="addSerieLastSerie">Totales de hoy</string>
+    <string name="addSerieLastSerie">Ultimas serie</string>
     <string name="addSerieAdded">Se agrego la serie de %1$d flechas</string>
 
     <string name="addSerieDatetime">Cuando</string>
