--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -174,6 +174,8 @@
     <string name="stoppedStatus">Paro</string>
     <string name="finishedStatus">Termino</string>
     <string name="waitingToStart">Esperando...</string>
+    <string name="retentions_serie_index">%1$d / %2$d</string>
+    <string name="retentions_repetitions_index">%1$d / %2$d</string>
 
     <!-- Notifications between the excersie -->
     <string name="finishedSerie">Termino serie</string>
