ISSUE-304: Improve stats charts being shown

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -213,6 +213,7 @@
     <string name="tournament_view_tournament_delete">Borrar</string>
     <string name="tournament_view_serie_creating_back">Si vas para atras vas a borrar la serie incompleta. ¿Estas seguro?</string>
     <string name="tournament_view_stats_arrow_chart_description"># de flechas por puntaje</string>
+    <string name="tournament_view_stats_color_chart_description"># de flechas por color</string>
     <string name="tournament_view_stats_series_chart_description">Puntaje por serie</string>
     <string name="tournament_view_stats_serie">Serie</string>
     <string name="tournament_view_stats_arrow">Flecha</string>
